--- a/src/Resources/app/administration/src/styles/mt-fixes.scss
+++ b/src/Resources/app/administration/src/styles/mt-fixes.scss
@@ -9,3 +9,10 @@
         flex: 1 0%;
     }
 }
+.mt-banner-small {
+    
+    .mt-banner__body {
+        padding: 12px 20px;
+        font-size: 14px;
+    }
+}
