--- a/src/Resources/views/storefront/layout/meta.html.twig
+++ b/src/Resources/views/storefront/layout/meta.html.twig
@@ -20,7 +20,10 @@
                         grid-column-end: var(--elysium-section-block-col-end, span 12);
                         grid-row-end: var(--elysium-section-block-row-end, auto);
                         order: var(--elysium-section-block-order, 999);
-                        padding: var(--elysium-section-block-pt, 20px) var(--elysium-section-block-pe, 20px) var(--elysium-section-block-pb, 20px) var(--elysium-section-block-ps, 20px);
+                        padding: var(--elysium-section-block-pt, 0px) 
+                            var(--elysium-section-block-pe, 0px) 
+                            var(--elysium-section-block-pb, 0px) 
+                            var(--elysium-section-block-ps, 0px);
                     }
                 </style>
             {% endapply %}
