replave v-model:value attribute in blur-number-input components

--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-banner/config/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-banner/config/template.html.twig
@@ -59,7 +59,6 @@
             :cols-desktop="3">
 
             <blur-number-input 
-                v-model:value="viewportConfig.aspectRatio.width"
                 :label="$tc('blurElysiumSlider.config.sizing.aspectRatio.width')"
                 :placeholder="viewportsPlaceholder('aspectRatio.width', 4)"
                 unit="Ratio"
@@ -67,7 +66,9 @@
                 :disabled="viewportConfig.aspectRatio.auto === true"
                 :device="deviceView"
                 :show-device="true"
-                @on-device="deviceSwitch" />
+                :model-value="viewportConfig.aspectRatio.width"
+                @on-device="deviceSwitch"
+                @update-value="value => viewportConfig.aspectRatio.width = value" />
         </blur-column>
 
         <blur-column
@@ -75,7 +76,6 @@
             :cols-desktop="3">
 
             <blur-number-input 
-                v-model:value="viewportConfig.aspectRatio.height"
                 :label="$tc('blurElysiumSlider.config.sizing.aspectRatio.height')"
                 :placeholder="viewportsPlaceholder('aspectRatio.height', 3)"
                 unit="Ratio"
@@ -83,7 +83,9 @@
                 :disabled="viewportConfig.aspectRatio.auto === true"
                 :device="deviceView"
                 :show-device="true"
-                @on-device="deviceSwitch" />
+                :model-value="viewportConfig.aspectRatio.height"
+                @on-device="deviceSwitch"
+                @update-value="value => viewportConfig.aspectRatio.height = value" />
         </blur-column>
 
         <blur-column
@@ -91,13 +93,14 @@
             :cols-desktop="3">
 
             <blur-number-input 
-                v-model:value="viewportConfig.maxHeight"
                 :label="$tc('blurElysiumSlider.config.sizing.maxHeight.label')"
                 :placeholder="viewportsPlaceholder('maxHeight', 'noLimit', 'blurElysium.general')"
                 :allow-empty="true"
                 :device="deviceView"
                 :show-device="true"
-                @on-device="deviceSwitch" />
+                :model-value="viewportConfig.maxHeight"
+                @on-device="deviceSwitch"
+                @update-value="value => viewportConfig.maxHeight = value" />
         </blur-column>
 
     </blur-section>
