--- a/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
@@ -45,7 +45,8 @@
                     :placeholder="devicePlaceholder('container.maxWidth', $t('blurElysium.general.noLimit'))"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.container.maxWidth" /> 
+                    :model-value="slideViewportSettings.container.maxWidth"
+                    @update-value="value => slideViewportSettings.container.maxWidth = value" /> 
             </blur-column>
 
             <blur-column
@@ -81,7 +82,8 @@
                     :placeholder="devicePlaceholder('container.paddingX', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.container.paddingX" /> 
+                    :model-value="slideViewportSettings.container.paddingX"
+                    @update-value="value => slideViewportSettings.container.paddingX = value" /> 
             </blur-column>
 
             <blur-column
@@ -94,7 +96,8 @@
                     :placeholder="devicePlaceholder('container.paddingY', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.container.paddingY" /> 
+                    :model-value="slideViewportSettings.container.paddingY"
+                    @update-value="value => slideViewportSettings.container.paddingY = value" /> 
             </blur-column>
 
             <blur-column
@@ -107,7 +110,8 @@
                     :placeholder="devicePlaceholder('container.gap', 20)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.container.gap" /> 
+                    :model-value="slideViewportSettings.container.gap"
+                    @update-value="value => slideViewportSettings.container.gap = value" /> 
             </blur-column>
 
             <blur-column
@@ -120,7 +124,8 @@
                     :placeholder="devicePlaceholder('container.borderRadius', 0)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.container.borderRadius" /> 
+                    :model-value="slideViewportSettings.container.borderRadius"
+                    @update-value="value => slideViewportSettings.container.borderRadius = value" /> 
             </blur-column>
 
         </blur-section>
