--- a/src/Resources/app/administration/src/component/slides/form/focus-image/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/focus-image/template.html.twig
@@ -65,7 +65,8 @@
                         :show-device="true"
                         :device="currentDevice"
                         @on-device="deviceSwitch"
-                        v-model:value="slideViewportSettings.image.maxWidth" /> 
+                        :model-value="slideViewportSettings.image.maxWidth"
+                        @update-value="value => slideViewportSettings.image.maxWidth = value" /> 
                 </blur-column>
 
                 <blur-column>
