--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/arrows/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/arrows/template.html.twig
@@ -34,7 +34,8 @@
             mobile: { gridColumnEnd: 'span 12' },
             tablet: { gridColumnEnd: 'span 6' },
         })"
-        v-model:value="arrowsViewportConfig.iconSize"
+        :model-value="arrowsViewportConfig.iconSize"
+        @update-value="value => arrowsViewportConfig.iconSize = value"
         :placeholder="viewportsPlaceholder('arrows.iconSize', 24)"
         :label="$tc('blurElysiumSlider.config.arrows.size.label')"
         :show-device="true"
