--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/sizing/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/sizing/template.html.twig
@@ -5,7 +5,6 @@
     :description="$tc('blurElysiumSlider.config.sizing.aspectRatio.description')">
 
     <blur-number-input 
-        v-model:value="sizingViewportConfig.aspectRatio.width"
         :style="deviceStyle({
             mobile: { gridColumnEnd: 'span 12' },
             desktop: { gridColumnEnd: 'span 4' },
@@ -15,10 +14,11 @@
         unit="Ratio"
         :show-device="true"
         :device="deviceView"
-        @on-device="deviceSwitch" />
+        @on-device="deviceSwitch"
+        :model-value="sizingViewportConfig.aspectRatio.width"
+        @update-value="value => sizingViewportConfig.aspectRatio.width = value" />
 
     <blur-number-input 
-        v-model:value="sizingViewportConfig.aspectRatio.height"
         :style="deviceStyle({
             mobile: { gridColumnEnd: 'span 12' },
             desktop: { gridColumnEnd: 'span 4' },
@@ -28,10 +28,11 @@
         unit="Ratio"
         :show-device="true"
         :device="deviceView"
-        @on-device="deviceSwitch" />
+        @on-device="deviceSwitch"
+        :model-value="sizingViewportConfig.aspectRatio.height"
+        @update-value="value => sizingViewportConfig.aspectRatio.height = value" />
 
     <blur-number-input 
-        v-model:value="sizingViewportConfig.maxHeight"
         :style="deviceStyle({
             mobile: { gridColumnEnd: 'span 12' },
             desktop: { gridColumnEnd: 'span 4' },
@@ -41,7 +42,9 @@
         :placeholder="viewportsPlaceholder('sizing.maxHeight', 'noLimit', 'blurElysium.general')"
         :device="deviceView"
         :show-device="true"
-        @on-device="deviceSwitch" />
+        @on-device="deviceSwitch"
+        :model-value="sizingViewportConfig.maxHeight"
+        @update-value="value => sizingViewportConfig.maxHeight = value" />
 
 </blur-section>
 
@@ -51,7 +54,6 @@
     :title="$tc('blurElysiumSlider.config.sizing.spacing.label')">
 
     <blur-number-input 
-        v-model:value="sizingViewportConfig.slidesGap"
         :label="$tc('blurElysiumSlider.config.sizing.spacing.slidesGap.label')"
         :placeholder="viewportsPlaceholder('sizing.slidesGap', 0)"
         :allow-empty="true"
@@ -61,10 +63,11 @@
         })"
         :device="deviceView"
         :show-device="true"
-        @on-device="deviceSwitch" />
+        @on-device="deviceSwitch"
+        :model-value="sizingViewportConfig.slidesGap"
+        @update-value="value => sizingViewportConfig.slidesGap = value" />
 
     <blur-number-input 
-        v-model:value="sizingViewportConfig.paddingY"
         :label="$tc('blurElysium.general.paddingY')"
         :placeholder="viewportsPlaceholder('sizing.paddingY', 24)"
         :style="deviceStyle({
@@ -73,10 +76,11 @@
         })"
         :device="deviceView"
         :show-device="true"
-        @on-device="deviceSwitch" />
+        @on-device="deviceSwitch"
+        :model-value="sizingViewportConfig.paddingY"
+        @update-value="value => sizingViewportConfig.paddingY = value" />
 
     <blur-number-input 
-        v-model:value="sizingViewportConfig.paddingX"
         :label="$tc('blurElysium.general.paddingX')"
         :placeholder="viewportsPlaceholder('sizing.paddingY', 24)"
         :style="deviceStyle({
@@ -85,6 +89,8 @@
         })"
         :device="deviceView"
         :show-device="true"
-        @on-device="deviceSwitch" />
+        @on-device="deviceSwitch"
+        :model-value="sizingViewportConfig.paddingX"
+        @update-value="value => sizingViewportConfig.paddingX = value" />
 
 </blur-section>
