--- a/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
@@ -17,7 +17,8 @@
                     :placeholder="devicePlaceholder('content.maxWidth', $t('blurElysium.general.noLimit'))"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.content.maxWidth" /> 
+                    :model-value="slideViewportSettings.content.maxWidth"
+                    @update-value="value => slideViewportSettings.content.maxWidth = value" /> 
             </blur-column>
         </blur-section>
     </blur-column>
@@ -45,7 +46,8 @@
                     :placeholder="devicePlaceholder('content.paddingX', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.content.paddingX" />
+                    :model-value="slideViewportSettings.content.paddingX"
+                    @update-value="value => slideViewportSettings.content.paddingX = value" />
             </blur-column>
 
             <blur-column
@@ -58,7 +60,8 @@
                     :placeholder="devicePlaceholder('content.paddingY', 0)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.content.paddingY" /> 
+                    :model-value="slideViewportSettings.content.paddingY"
+                    @update-value="value => slideViewportSettings.content.paddingY = value" /> 
             </blur-column>
         </blur-section>
     </blur-column>
