--- a/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/general/template.html.twig
@@ -86,11 +86,11 @@
         <blur-number-input 
             :label="$tc('blurElysium.general.fontSize')"
             :placeholder="viewportsPlaceholder('headline.fontSize', 20)"
-            :model-value="slideViewportSettings.headline.fontSize"
             :device="currentDevice"
             :show-device="true"
+            :model-value="slideViewportSettings.headline.fontSize"
             @on-device="deviceSwitch" 
-            @update-value="value => slideViewportSettings.headline.fontSize = value"/>
+            @update-value="value => slideViewportSettings.headline.fontSize = value" />
     </blur-column>
 
     <blur-column 
@@ -137,7 +137,8 @@
                     :placeholder="devicePlaceholder('description.fontSize', 14)"
                     :show-device="true"
                     @on-device="deviceSwitch"
-                    v-model:value="slideViewportSettings.description.fontSize" />
+                    :model-value="slideViewportSettings.description.fontSize"
+                    @update-value="value => slideViewportSettings.description.fontSize = value" />
             </blur-column>
         </blur-section>
 
