add placeholder to slide gradient degree

--- a/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
@@ -69,6 +69,7 @@
 
                 <blur-number-input
                     type="int"
+                    placeholder="45"
                     :step="1"
                     :min="-360"
                     :max="360"
