change slide overview title translation

--- a/src/Resources/app/administration/src/component/slides/overview/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/overview/template.html.twig
@@ -16,7 +16,7 @@
                 :color="module.color" />
 
             <h2>
-                {{ $t('blurElysiumSlides.label') }}
+                {{ $t('blurElysiumSlides.slideOverviewLabel') }}
                 <span :style="{
                         fontWeight: 'normal'
                     }">
