--- a/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
@@ -166,7 +166,7 @@
                 :cols-desktop="3">
 
                 <blur-select-input 
-                    :label="$tc('blurElysium.general.alignItems')" 
+                    :label="$tc('blurElysium.general.alignItemsLabel')" 
                     :placeholder="devicePlaceholder('container.alignItems', 'center', 'blurElysium.general')"
                     :device="currentDevice"
                     :show-device="true"
