hide section notifications behind feature flag

--- a/src/Resources/app/administration/src/extension/sw-cms-sidebar/template.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-cms-sidebar/template.html.twig
@@ -56,7 +56,7 @@
 <!-- eslint-disable-next-line sw-deprecation-rules/no-twigjs-blocks -->
 {% block sw_cms_sidebar_block_overview_preview %}
     <mt-banner 
-        v-if="currentBlockCategory === 'blur-elysium-blocks'"
+        v-if="currentBlockCategory === 'blur-elysium-blocks' && isSectionFeatureActive"
         variant="info"
         :hideIcon="true"
         class="mt-banner-small"
