fix device dependencies in slider and banner cms element config

--- a/src/Resources/app/administration/src/component/cms/blocks/blur-elysium-block-two-col/preview/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/blocks/blur-elysium-block-two-col/preview/template.html.twig
@@ -5,6 +5,7 @@
     @drag.prevent>
 
     <div 
+        v-if="isSectionFeatureActive"
         :style="{
             position: 'absolute',
             inset: '0',
