--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/arrows/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/arrows/template.html.twig
@@ -39,8 +39,8 @@
         :placeholder="viewportsPlaceholder('arrows.iconSize', 24)"
         :label="$tc('blurElysiumSlider.config.arrows.size.label')"
         :show-device="true"
-        :device="deviceView"
-        @on-device="deviceSwitch" />
+        :device="currentDevice"
+        @on-device="cmsDeviceSwitch" />
 
     <blur-colorpicker
         :style="deviceStyle({
