--- a/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/elements/blur-elysium-slider/config/template.html.twig
@@ -8,7 +8,7 @@
         <blur-device-switch 
             layout="row"
             show-label="false"
-            :default-viewport="activeViewport"
+            :default-viewport="currentDevice"
             @change-viewport="changeViewport" 
             :style="{
                 padding: '0',
